# meshview

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  API Documentation.md  Containerfile  Dockerfile  PERFORMANCE_OPTIMIZATION.md  README  README-Docker.md  README.md  add_db_indexes.py  alembic.ini  cleanup.sh  config  config.ini  config.txt  contributing.md  create_example_migration.py  create_migration.py  main.py  meshtastic  mvrun.py  pyproject.toml  requirements.txt  sample.config.ini  setup-dev.sh  start.sh  startdb.py
.github/workflows/: container.yml  docker-image-CI.yml  lint.yml
alembic/: env.py
alembic/versions/: 1717fa5c6545_add_example_table.py  2b5a61bb2b75_auto_generated_migration.py  ac311b3782a1_add_route_return_to_traceroute.py  add_import_time_us_columns.py  c88468b7ab0b_initial_migration.py
container/: build-container.sh  config.patch
docker/: Dockerfile  README.md
docs/: ALEMBIC_SETUP.md  API_Documentation.md  Database-Changes-With-Alembic.md  README.md  TIMESTAMP_MIGRATION.md
meshtastic/: protobuf
meshview/: __version__.py  acme_client.py  config.py  database.py  decode_payload.py  migrations.py  models.py  mqtt_database.py  mqtt_reader.py  mqtt_store.py  notify.py  store.py  web.py
meshview/lang/: en.json  es.json
meshview/static/: api-chat.html  api-config.html  api-edges.html  api-nodes.html  api-packets.html  api-stats.html  api.html  heatmap.html  kiosk.html  live-map.html
meshview/templates/: base.html  chat.html  chat_packet.html  error.html  firehose.html  index.html  map.html  net.html  net_packet.html  node.html  node2.html  node_graphs.html  (+12 more)
(+2 files in other folders)
